--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ copyright: 2020
 
 # 欢迎文，false，关，true，开
 
-intro: false         # Tip: Remove the span from site_heading if intro is set to true
+intro: true         # Tip: Remove the span from site_heading if intro is set to true
 # This will be displayed in your intro
 
 # 欢迎词，logo，Welcome
