--- a/_config.yml
+++ b/_config.yml
@@ -58,14 +58,14 @@ weixin: qinghongjiao
 favicon: true
 favicon_location: "images/favicon.ico"
 
-profile_picture: images/temp.png
+profile_picture: https://icp.me/assets/img/chiren.jpg
 paginate: 16
 paginate_path: "/page/:num"
 tracking_id: UA-69243 # GA Tracking ID
 
 # Social Stuff | open graph and twitter cards
-og_image: "images/accent.png" # This will show in facebook thumbnails
-twitter_image: "http://ankitsultana.com/images/accent.png?1234" # This will show in twitter cards
+og_image: "https://zibaicai.com/assets/images/avatar@2x.png" # This will show in facebook thumbnails
+twitter_image: "https://hbw.me/assets/images/avatars@2x.png" # This will show in twitter cards
 
 ####################################
 ####################################
