--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # User Settings | Edit there as per required
 
 title: accent～老和尚
-url: "http://laoheshang.github.io"
+url: "https://icp.me"
 baseurl: "/accent"
 
 # This will show up at the top of index page
